2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* sound-theme.c (save_custom_theme): Fix permissions on the
	custom theme directory, otherwise not even the user can read the files
	in there

2008-07-28  Lennart Poettering  <lennart@poettering.net>

	* sound-theme.c: pass 'cache control' property explicitly to make sure
	that the sound is never cached when it is previewed. Pass 'enable'
	property explicitly to make sure that the sound is guaranteed to be
	played, even when sound events are otherwise disabled.

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* sound-properties-capplet.c (create_dialog), (setup_dialog),
	(get_legacy_settings):
	* sound-properties.glade:
	* sound-theme-definition.h:
	* sound-theme-file-utils.[ch]:
	* sound-theme.[ch]: Remove separate bell settings tab, remove
	libsounds dependency, add freedesktop sound theme support through
	libcanberra (Closes: #542979)

==================== 2.23.2 ====================

2008-04-25  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Tim-Phillip Müller <t.i.m@zen.co.uk>

	* sound-properties-capplet.c: (add_device_with_probe),
	(device_added_alsa), (device_added_oss), (device_added_callback),
	(device_removed_callback), (setup_devices_by_capability),
	(setup_hal_devices), (setup_devices): add support for OSS 4 (bug
	#529720)

2008-04-01  Jens Granseuer  <jensgr@gmx.net>

	* mixer-support.c: (create_mixer_device_tree_model): sort mixer devices
	alphabetically (bug #525530)

2008-04-01  Jens Granseuer  <jensgr@gmx.net>

	* sound-properties-capplet.c: (device_added_callback): don't show
	modems and other unwanted devices (bug #523888)

2008-03-27  Jens Granseuer  <jensgr@gmx.net>

	* sound-properties.glade: don't mention esd (bug #519722)

2008-03-24  Jaap A. Haitsma  <jaap@haitsma.org>

	* visual-bell.png: New tango icon
	(bug #523916)

2008-02-09  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: use the libsounds.la now that libsounds uses libtool
	(bug #515252)
