@@ -1,5 +1,11 @@
 2008-07-28  Bastien Nocera  <hadess@hadess.net>
 
+	* sound-theme.c (play_sound_preview), (get_sound_filename):
+	When selecting custom files, listen to "update-preview", and try
+	to play everything that the user might select (Closes: #545056)
+
+2008-07-28  Bastien Nocera  <hadess@hadess.net>
+
 	* sound-theme.c (save_custom_theme): Fix permissions on the
 	custom theme directory, otherwise not even the user can read the files
 	in there
